<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="64.0dip"
        android:layout_height="64.0dip"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:src="@drawable/music" />

    <TextView
        android:id="@+id/music_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/time"
        android:textColor="@drawable/text_color_selector" 
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/music_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/albumImage"
        android:layout_toLeftOf="@id/music_duration"
        android:focusable="true"
        android:text="@string/song"
        android:textColor="@drawable/text_color_selector"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/music_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/music_title"
        android:layout_below="@id/music_title"
        android:layout_marginTop="5.0dip"
        android:text="@string/singer"
        android:textColor="@drawable/text_color_selector"
        android:textSize="16sp" />

</RelativeLayout>